<resources>
    <string name="app_name">Petagram</string>
    <string name="nombre_mascota">Meteoro</string>
    <string name="cant_likes">50</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_acercade">Acerca de</string>
    <string name="label_nombre">Nombre Contacto</string>
    <string name="label_correo">Correo Electrónio</string>
    <string name="label_mensaje">Mensaje</string>
    <string name="label_enviar_correo">Enviar Comentario</string>
    <string name="label_acerca_de">Acerca de...</string>
    <string name="label_version_etiqueta">Versión Programa</string>
    <string name="label_version">1.0</string>
    <string name="label_author">Juan Camilo Chaparro Castro</string>
    <string name="label_author_etiqueta">Autor:</string>
    <string name="label_profesion_etiqueta">Profesión:</string>
    <string name="label_profesion">Ingeniero de Sistemas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

