<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.knaujolimac.proyectomascotas.AcercaDeActivity"
    android:orientation="vertical">

    <include android:id="@+id/miActionBarB"
        layout="@layout/actionbaropcionb"  >
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            card_view:cardCornerRadius="4dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0">


                    <ImageView
                        android:id="@+id/ivImagenAcerca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fondoandroid"
                        android:scaleType="centerCrop"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2">

                    <TextView
                        android:id="@+id/tvEtAutor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_author_etiqueta"
                        android:textSize="@dimen/nombre_acercade"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/left"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvAutor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_author"
                        android:textSize="@dimen/nombre_acercade"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/left" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="3">

                    <TextView
                        android:id="@+id/tvEtProfe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_profesion_etiqueta"
                        android:textSize="@dimen/nombre_acercade"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/left"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvProfe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_profesion"
                        android:textSize="@dimen/nombre_acercade"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/left" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="4">

                    <TextView
                        android:id="@+id/tvEtVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_version_etiqueta"
                        android:textSize="@dimen/nombre_acercade"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/left"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_version"
                        android:textSize="@dimen/nombre_acercade"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/left" />
                </LinearLayout>
            </GridLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
